[package]
name = "tempus"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", default-features = false, features = [
    "std",
    "derive",
    "help",
    "usage",
    "suggestions",
] }
humantime = "2.2"
thiserror = "2.0"
ctrlc = "3.4"
tui = "0.19"
crossterm = "0.29"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
