[package]
name = "tempus"
version = "0.3.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", default-features = false, features = [
    "std",
    "derive",
    "help",
    "usage",
    "suggestions",
] }
humantime = "2.2"
thiserror = "2.0"
ctrlc = "3.4"
tui = "0.19"
crossterm = "0.29"
yansi = "1.0.1"
chrono = { version = "0.4", features = ["clock", "serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
