[package]
name = "tempus"
version = "0.3.6"
edition = "2024"
license = "MPL"
description = "Simple, portable and tiny terminal timer utility"
homepage = "https://github.com/notashelf/tempus"
repository = "https://github.com/notashelf/tempus"
readme = "README.md"
authors = ["NotAShelf <raf@notashelf.dev>"]


[dependencies]
clap = { version = "4.5", default-features = false, features = [
    "std",
    "derive",
    "help",
    "usage",
    "suggestions",
] }
humantime = "2.2"
thiserror = "2.0"
ctrlc = "3.4"
ratatui = "0.29.0"
crossterm = "0.29"
yansi = "1.0.1"
chrono = { version = "0.4", features = ["clock", "serde"] }
colorgrad = "0.7.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
